# ProfileForge-AI

./: .gitignore  README.md  lld.md
.github/: copilot-instructions.md
backend/: .env.example  .gitignore  README.md  agent.py  auth.py  database.py  main.py  models.py  pyproject.toml
backend/logs/: ai_activity.jsonl
frontend/: README.md
frontend/app/: layout.tsx  page.tsx  types.ts
frontend/app/auth/: page.tsx
frontend/app/lib/: api.ts
